infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-expiration
  template:
    metadata:
      labels:
        app: ticketting-expiration
    spec:
      containers:
        - name: ticketting-expiration
          image: mydevlab:5000/ticketting-expiration
