infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-auth
  template:
    metadata:
      labels:
        app: ticketting-auth
    spec:
      containers:
        - name: ticketting-auth
          image: mydevlab:5000/ticketting-auth
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-auth-service
spec:
  selector:
    app: ticketting-auth
  ports:
    - name: ticketting-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
