infra/k8s/auth-mongo_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-mongo-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-mongo-auth
  template:
    metadata:
      labels:
        app: ticketting-mongo-auth
    spec:
      containers:
        - name: ticketting-mongo-auth
          image: mongo
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-mongo-auth-service
spec:
  selector:
    app: ticketting-mongo-auth
  ports:
    - name: ticketting-mongo-auth
      protocol: TCP
      port: 27017
      targetPort: 27017
