infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-expiration-redis
  template:
    metadata:
      labels:
        app: ticketting-expiration-redis
    spec:
      containers:
        - name: ticketting-expiration-redis
          image: redis
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-expiration-redis-service
spec:
  selector:
    app: ticketting-expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
