infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-nats
  template:
    metadata:
      labels:
        app: ticketting-nats
    spec:
      containers:
        - name: ticketting-nats  
          image: nats-streaming:0.18.0
          args: [
                -p,
                '4222',
                '-m',
                '8222',
                '-hbi',
                '5s',
                '-hbf',
                '2',
                '-hbt',
                '5s',
                '-SD',
                '-cid',
                'ticketting',
             ]
---
apiVersion : v1
kind: Service
metadata:
  name: ticketting-nats-service
spec:
  selector:
    app: ticketting-nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
