infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-orders
  template:
    metadata:
      labels:
        app: ticketting-orders
    spec:
      containers:
        - name: ticketting-orders
          image: mydevlab:5000/ticketting-orders
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-orders-service
spec:
  selector:
    app: ticketting-orders
  ports:
    - name: ticketting-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
