infra/k8s/orders-mongo_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-mongo-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-mongo-orders
  template:
    metadata:
      labels:
        app: ticketting-mongo-orders
    spec:
      containers:
        - name: ticketting-mongo-orders
          image: mongo
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-mongo-orders-service
spec:
  selector:
    app: ticketting-mongo-orders
  ports:
    - name: ticketting-mongo-orders
      protocol: TCP
      port: 27017
      targetPort: 27017
