infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-paymentss-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-payments
  template:
    metadata:
      labels:
        app: ticketting-payments
    spec:
      containers:
        - name: ticketting-payments
          image: mydevlab:5000/ticketting-payments
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-payments-service
spec:
  selector:
    app: ticketting-payments
  ports:
    - name: ticketting-payments
      protocol: TCP
      port: 3000
      targetPort: 3000
