infra/k8s/ticketts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketting-ticketts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketting-ticketts
  template:
    metadata:
      labels:
        app: ticketting-ticketts
    spec:
      containers:
        - name: ticketting-ticketts
          image: mydevlab:5000/ticketting-ticketts
---

apiVersion: v1
kind: Service
metadata:
    name: ticketting-ticketts-service
spec:
  selector:
    app: ticketting-ticketts
  ports:
    - name: ticketting-ticketts
      protocol: TCP
      port: 3000
      targetPort: 3000
